[Android] Avoid null description strings in the policy audit logger.

Add an assert to catch null values even if the audit logger is disabled
(which is most of the time).

Bug: 746174
Change-Id: Ie39ff0c9095bf7636ac03508c468080af2200253
Reviewed-on: https://chromium-review.googlesource.com/612241
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494394}
Former-commit-id: 81699cb2882e2b6f0becbdc308948fd56d5b7bbf